--- a/package.json
+++ b/package.json
@@ -9,5 +9,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Mohammed-Galal/React-Clone.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Mohammed-Galal/React-Clone/issues"
+  },
+  "homepage": "https://github.com/Mohammed-Galal/React-Clone#readme"
 }
